# getip

./: pyproject.toml
src/getip/: __init__.py  getip.py
