[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "getip"
description = "Simple script for getting your IP"
version = "v1.0"
authors = [{name = "Nakidai", email = "plaza521@inbox.ru"}]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
getip = "getip:main"
